[gd_scene load_steps=2 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 219.0
margin_top = 137.0
margin_right = 420.0
margin_bottom = 223.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 201.0
margin_bottom = 14.0
text = "THE UNTITLED SANDBOX GAME"

[node name="StartBT" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 201.0
margin_bottom = 38.0
text = "Host Server"

[node name="StartBT2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 201.0
margin_bottom = 62.0
text = "Join Server"

[node name="QuitBT" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 201.0
margin_bottom = 86.0
text = "Quit Game"
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartBT" to="." method="_on_StartBT_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartBT2" to="." method="_on_StartBT_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartBT2" to="." method="_on_StartBT2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBT" to="." method="_on_QuitBT_pressed"]
